[package]
name = "oracle-exp-reader"
version = "0.1.0"
edition = "2021"
description = "High-performance Oracle EXP dump file parser"

[[bin]]
name = "oracle-exp-reader"
path = "src/main.rs"

[lib]
name = "oracle_exp_reader"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
memmap2 = "0.9"
encoding_rs = "0.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
